my first commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+  <h3>
+    my first git repo ever
+  </h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quae maxime voluptatem optio repellendus hic maiores
+    ipsa amet natus libero.</p>
 </body>
 
 </html>
